<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagesFragments.ReminderFragment">

    <androidx.cardview.widget.CardView app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/reminderIndicator1"
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/green"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_clock_"
                        android:padding="10dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/reminderTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:padding="10dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:fontFamily="serif"
                            android:text="Title"/>

                        <TextView
                            android:id="@+id/reminderAbout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_vertical"
                            android:textStyle="normal"
                            android:textSize="15sp"
                            android:fontFamily="@font/roboto"
                            android:padding="10dp"
                            android:text="Description"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/reminderSwitch"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:layout_height="match_parent"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repeatedLayoutRv"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/reminderIndicator2"
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@color/green"/>
                    <TextView
                        android:id="@+id/sunRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/circle_day_bg"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:text="@string/sun"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/monRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/mon"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/tueRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/tue"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/wedRv"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/wed"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/thurRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/thur"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/friRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/fri"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/satRv"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/circle_day_bg"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:text="@string/sat"
                        android:textStyle="bold|italic"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</FrameLayout>